--- a/static/css/modal.css
+++ b/static/css/modal.css
@@ -2,7 +2,7 @@
 #customModal {
     display: none;
     position: fixed;
-    z-index: 9999;
+    z-index: 9997;
     left: 0;
     top: 0;
     right: 0;
@@ -104,7 +104,7 @@
     position: fixed;
     top: 32px;
     right: 32px;
-    z-index: 10000;
+    z-index: 9998;
     min-width: 180px;
     max-width: 90vw;
     background: #fff;
